# EasyLog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
config/: easylog.toml
packaging/: easylog.service  easylog.toml
packaging/deb/: postinst
src/: auth.rs  config.rs  main.rs  sources.rs  state.rs
src/logtype/: apache.rs  mod.rs  nginx.rs  traefik.rs
src/storage/: mod.rs
src/syslog/: mod.rs
src/web/: apache.rs  mod.rs  nginx.rs  traefik.rs
templates/: apache.html  base.html  index.html  login.html  setup.html  sources.html  traefik.html
