[package]
name = "easylog"
version = "0.3.2"
edition = "2024"
description = "EasyLog — a log analyzer web service"
license = "MIT"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }
bcrypt = "0.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
socket2 = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
duckdb = { version = "1", features = ["bundled", "chrono"] }
syslog_loose = "0.21"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
toml = "0.8"
anyhow = "1"
chrono = "0.4"
tera = "1"

# Linux-only: raw SO_RCVBUFFORCE setsockopt to bypass net.core.rmem_max for the
# UDP receive buffer (see src/syslog/mod.rs). Not needed on other platforms.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# ─── Packaging ───────────────────────────────────────────────────────────────
# .deb via `cargo deb` (cargo-deb). Installs the binary, web assets, default
# config, and the systemd unit. Built natively per-arch in CI (amd64/arm64).
[package.metadata.deb]
maintainer = "yarivha <yariv.hakim@gmail.com>"
copyright = "2026, yarivha <yariv.hakim@gmail.com>"
extended-description = "EasyLog is a multi-log analyzer: it ingests logs over syslog (UDP + TCP), parses each by type, stores them in DuckDB, and serves a dashboard per log type."
section = "utils"
priority = "optional"
depends = "$auto"
maintainer-scripts = "packaging/deb"
# The default config is shipped to /usr/share and copied to /etc/easylog by the
# postinst only if absent, so upgrades never overwrite an admin's config (it is
# intentionally NOT a dpkg conffile).
assets = [
    ["target/release/easylog", "usr/bin/", "755"],
    ["packaging/easylog.toml", "usr/share/easylog/easylog.toml", "644"],
    ["packaging/easylog.service", "usr/lib/systemd/system/easylog.service", "644"],
    ["README.md", "usr/share/doc/easylog/README.md", "644"],
    ["examples/rsyslog/apache-access.conf", "usr/share/doc/easylog/examples/rsyslog/apache-access.conf", "644"],
]

# .rpm via `cargo generate-rpm` (cargo-generate-rpm). Same payload as the .deb.
[package.metadata.generate-rpm]
summary = "EasyLog — a multi-log analyzer (syslog ingest, dashboard per log type)"
auto-req = "no"
# Reload systemd and restart on install/upgrade so the new unit + binary apply.
post_install_script = """
if [ ! -e /etc/easylog/easylog.toml ] && [ -e /usr/share/easylog/easylog.toml ]; then
    mkdir -p /etc/easylog
    cp /usr/share/easylog/easylog.toml /etc/easylog/easylog.toml
fi
if [ -d /run/systemd/system ]; then
    systemctl daemon-reload >/dev/null 2>&1 || true
    # $1 >= 2 means upgrade: always restart so the new binary takes effect.
    if [ "$1" -ge 2 ]; then
        systemctl restart easylog.service >/dev/null 2>&1 || true
    fi
fi
"""
assets = [
    { source = "target/release/easylog", dest = "/usr/bin/easylog", mode = "755" },
    { source = "packaging/easylog.toml", dest = "/usr/share/easylog/easylog.toml", mode = "644" },
    { source = "packaging/easylog.service", dest = "/usr/lib/systemd/system/easylog.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/easylog/README.md", mode = "644", doc = true },
    { source = "examples/rsyslog/apache-access.conf", dest = "/usr/share/doc/easylog/examples/rsyslog/apache-access.conf", mode = "644", doc = true },
]
